# dq

./: .editorconfig  Cargo.toml  flake.nix  justfile
src/: cache.rs  config.rs  context.rs  doc.rs  main.rs  progress.rs  utils.rs
src/command/: cat.rs  mod.rs  search.rs  update.rs
src/entity/: doc.rs  entry.rs  index.rs  mod.rs
