[package]
name = "dq"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "env"] }
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
xdg = "2"
toml_edit = { version = "0.22", features = ["serde"] }
toml = { version = "0.8" }
indicatif = "0.17"
futures = "0.3.30"
futures-util = "0.3.30"
bytes = "1"
libc = "0.2"
parking_lot = "0.12"

[dev-dependencies]
pretty_assertions = "1.4"

